# code2env

./: .gitignore  .gitmodules  README.md  WIP.md  pyproject.toml
.intern_workspace/.skill_sources/intern_feishu_docs_skill/: README.md  SKILL.md  config.json  echo.html
code2env/: __init__.py  __main__.py  batch.py  builder.py  cli.py  determinism.py  envdeps.py  executor.py  indexer.py  ingest.py  jsonio.py  jsonl_specs.py  llm.py  materialize.py  models.py  report.py  rich_fixtures.py  rollout.py  rollout_export.py  runtime.py  selector.py  spec.py
docs/: code2env_agentic_rl_prd.md  llm_candidate_selection.md  mvp_usage.md
survey/: 01-problem-and-goals.md  02-related-work.md
tests/: test_batch.py  test_determinism.py  test_envdeps.py  test_envelope.py  test_indexer_side_effects.py  test_llm_selection.py  test_mvp.py  test_report.py  test_reward.py  test_rich_fixtures.py  test_rollout.py  test_rollout_export.py  test_testlink_index.py
workspace/: ERROR_BOOK.md  project_rule.txt
workspace/coordinators/code2env/: coordinator.json
workspace/interns/intern_code2env_coordinator/: knowledge.md  status.md
workspace/interns/intern_code2env_dev/: knowledge.md  status.md
workspace/interns/intern_code2env_lead/: knowledge.md  status.md
workspace/interns/intern_code2env_worker_1/: knowledge.md  status.md
workspace/interns/intern_code2env_worker_2/: knowledge.md  status.md
workspace/interns/intern_code2env_worker_3/: knowledge.md  status.md
workspace/interns/intern_code2env_worker_4/: knowledge.md  status.md
workspace/tasks/code2env_lead/: README.md  (+2 more)
(+129 files in other folders)
