[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "code2env"
version = "0.1.0"
description = "Generate runnable agentic RL environments from Python code blocks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
code2env = "code2env.cli:main"

[tool.setuptools.packages.find]
include = ["code2env*"]
